--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-fastapi
-uvicorn
-pydantic
-python-dotenv
-openai
-PyGithub
-Pillow
-requests
-pyjwt
-authlib
-starlette
-streamlit
-numpy
+fastapi==0.116.1
+uvicorn==0.35.0
+pydantic==2.11.5
+python-dotenv==1.1.1
+openai==1.97.1
+PyGithub==2.8.1
+Pillow==11.0.0
+requests==2.32.3
+PyJWT==2.10.1
+authlib==1.6.4
+starlette==0.47.3
+streamlit==1.48.1
+numpy==2.2.6
